Document PPDG/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BTL_properties_financed_with_IBB__c</fullName>
        <description>How many other buy to let properties do you have financed with Al Rayan Bank?</description>
        <label>BTL properties financed with us</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance_After_18_Months__c</fullName>
        <formula>((1000 / 100) *  Profit_Rate_letter__c) * 1.5 + 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After 18 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_After_1_Year__c</fullName>
        <formula>IF( 
FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))=0, 
TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000)+&quot;.00&quot;, 
IF ( 
LEN(TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))-FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))=1, 
TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000)+&quot;0&quot;, 
LEFT(TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000),FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))+2) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After 1 Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_After_24_Months__c</fullName>
        <formula>((1000 / 100) *  Profit_Rate_letter__c) * 2 + 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After 24  Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_After_36_Months__c</fullName>
        <formula>((1000 / 100) *  Profit_Rate_letter__c) * 3 + 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After 36 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_on_Opened_Account__c</fullName>
        <formula>Account_with_IBB__r.Available_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance on Opened Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_outstanding_at_possession__c</fullName>
        <label>Balance outstanding at possession</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Expected_drawdown_date__c</fullName>
        <description>For use with CPF: this will be maintained by credit as the opportunity goes along to re-present a true reflection on when this matter will be complete</description>
        <label>Bank expected drawdown date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Omitted_Timestamp__c</fullName>
        <label>Batch Omitted Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank_Account_Number__c</fullName>
        <inlineHelpText>Account where the profit will be paid if profits are being paid quarterly</inlineHelpText>
        <label>External bank account number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank_Sort_Code__c</fullName>
        <inlineHelpText>Sort code where the profit will be paid if profits are being paid quarterly</inlineHelpText>
        <label>External bank sort code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgetary_Purposes__c</fullName>
        <formula>TEXT(HPP_extended_opportunity__r.Budget_Figures__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgetary Purposes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_name_match__c</fullName>
        <description>Used for NPAA 2nd line authorisation event</description>
        <label>Business name match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_type__c</fullName>
        <formula>text (Account.Business_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAA_Communications_Email_Address__c</fullName>
        <description>This field will be used for the email address to which CAA confirmation emails are sent to</description>
        <label>CAA Communications Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CAA_Decision__c</fullName>
        <label>CAA Decision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAA_Rebuild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAA Rebuild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAA_Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAA Welcome Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPFAmortisation_profit_only__c</fullName>
        <description>CPF Amortisation/profit only</description>
        <label>Amortisation/profit only</label>
        <picklist>
            <picklistValues>
                <fullName>Amortisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPFArrangement_fee__c</fullName>
        <description>CPF Arrangement Fee</description>
        <label>Arrangement fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPFOther_fees__c</fullName>
        <description>CPF other fees</description>
        <label>Other fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPFRelationship__c</fullName>
        <description>CPF Relationship</description>
        <label>Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Actual_Rate__c</fullName>
        <formula>CPF_Base_Rate__c +  CPF_Fixed_Rate__c +  CPF_Margin__c +  LIBOR_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Actual Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Base_Rate__c</fullName>
        <description>For use with CPF view</description>
        <label>Base Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Customer_Name__c</fullName>
        <label>CPF Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Deal_Type__c</fullName>
        <description>CPF build October 2013</description>
        <label>CPF Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part &amp; Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPF_Expiry_Date__c</fullName>
        <description>For use with CPF view</description>
        <label>CPF Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPF_Fixed_Rate__c</fullName>
        <description>For use with CPF view</description>
        <label>CPF Fixed Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Margin__c</fullName>
        <description>For use with CPF Offer Letters</description>
        <label>CPF Margin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Offer_Date__c</fullName>
        <inlineHelpText>for CPF build October 2013</inlineHelpText>
        <label>CPF Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPF_Payment_Frequency__c</fullName>
        <label>CPF Payment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Rate__c</fullName>
        <label>CPF Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Stage__c</fullName>
        <label>CPF Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved: awaiting valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuation received: awaiting offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROT received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capitalise_Profit__c</fullName>
        <label>Where would you like your profit paid to</label>
        <picklist>
            <picklistValues>
                <fullName>Reinvest in FTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Last_Updated__c</fullName>
        <formula>Floor(now() -  LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Last Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_packaged_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Sales Support member who has packaged the case</description>
        <label>Case packaged by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cashback_Eligibility__c</fullName>
        <formula>IF( OR( NOT(Fee_Assisted__c=&quot;Y&quot;), AND(Fee_Assisted__c=&quot;Y&quot;, IBB_Product__r.IBB_Product_Set__r.Name=&apos;Home Purchase Plan&apos;, ISPICKVAL(Panelled_Non_Panelled_Solicitor__c, &apos;Non panel solicitor&apos;))), 
0.0, IBB_Product__r.Cash_back_amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cashback Eligibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certified_all_photocopies__c</fullName>
        <description>Used for NPAA 2nd line authorisation event</description>
        <label>Certified all photocopies</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_Clearance_Date__c</fullName>
        <description>Please enter the date the cheque will clear in the 79988101 account for FTD Deposits opened in CC or online.</description>
        <inlineHelpText>Please enter the date the cheque will clear in the 79988101 account for FTD Deposits opened in CC or online.</inlineHelpText>
        <label>Cheque Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chequebook_Current_Account_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Explain criteria of applying for a chequebook and timescales involved. Please allow 5-7 working days for delivery.</inlineHelpText>
        <label>Chequebook (Current Account Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause_1_1_finance_type__c</fullName>
        <formula>IF( TEXT(Purpose_of_Finance__c) = &apos;refinancing&apos; , &apos;refinancing&apos;, &apos;purchase&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clause 1.1 finance type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Hse_Check_Copy_Attached__c</fullName>
        <label>Co Hse Check Copy Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_House_Check__c</fullName>
        <label>Company House Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_evidence_obtained__c</fullName>
        <label>Company evidence obtained</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Exception__c</fullName>
        <inlineHelpText>PLEASE NOTE THAT THIS FIELD SHOULD ONLY BE COMPLETED IF THE DRAWDOWN IS NOT TODAY.</inlineHelpText>
        <label>Completion Date Exception</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Observation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be completed by Compliance manager after the MMR observation has been completed</description>
        <inlineHelpText>To be completed by Compliance manager after the MMR observation has been completed</inlineHelpText>
        <label>Compliance Observation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concatenated_Beneficiary_Bank_Details__c</fullName>
        <formula>Beneficiary_Bank_Sort_Code__c +  Beneficiary_Bank_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated Beneficiary Bank Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLiabISAAppForm__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm,00OD0000005CFSl,00OD0000005CFSj,00OD0000005CFSk,00OD0000005CFSr,00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD000000CBIC0&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLiabISAAppForm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_AIP_Link__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateId=a0PD0000008vJr2&quot;+ 
&quot;&amp;reportid=00OD0000005qY9n&quot;+
&quot;&amp;Reportid=00OD0000005qevj&quot;+
&quot;&amp;DefaultPDF=True&quot;+ 
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga AIP Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_CA_Welcome_Letter__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm&quot;+
&quot;&amp;Reportid=00OD0000005CFSl&quot;+
&quot;&amp;Reportid=00OD0000005CFSj&quot;+
&quot;&amp;Reportid=00OD0000005CFSk&quot;+
&quot;&amp;Reportid=00OD0000005CFSr&quot;+
&quot;&amp;Reportid=00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kL0c&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga CA Welcome Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Decline_Letter__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+ 
&quot;&amp;Reportid=00OD0000005CFSm&quot;+ 
&quot;&amp;Reportid=00OD0000005CFSl&quot;+ 
&quot;&amp;Reportid=00OD0000005CFSj&quot;+ 
&quot;&amp;Reportid=00OD0000005CFSk&quot;+ 
&quot;&amp;Reportid=00OD0000005CFSr&quot;+ 
&quot;&amp;Reportid=00OD0000005CFSq&quot;+ 
&quot;&amp;templateId=a0PD0000005tph2&quot;+ 
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Decline Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Failed_eKYC_Template__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm&quot;+
&quot;&amp;Reportid=00OD0000005CFSl&quot;+
&quot;&amp;Reportid=00OD0000005CFSj&quot;+
&quot;&amp;Reportid=00OD0000005CFSk&quot;+
&quot;&amp;Reportid=00OD0000005CFSr&quot;+
&quot;&amp;Reportid=00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kLY2&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Failed eKYC Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Failed_eKYC_YPSA_Template__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm&quot;+
&quot;&amp;Reportid=00OD0000005CFSl&quot;+
&quot;&amp;Reportid=00OD0000005CFSj&quot;+
&quot;&amp;Reportid=00OD0000005CFSk&quot;+
&quot;&amp;Reportid=00OD0000005CFSr&quot;+
&quot;&amp;Reportid=00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kLI6&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Failed eKYC YPSA Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Liabilities_App_Form_3_4_App__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm,00OD0000005CFSl,00OD0000005CFSj,00OD0000005CFSk,00OD0000005CFSr,00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kL0X&quot;+
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Liabilities App Form 3-4  App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Liabilities_Application_Form_1_App__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm,00OD0000005CFSl,00OD0000005CFSj,00OD0000005CFSk,00OD0000005CFSr,00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kL11&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Liabilities Application Form 1 App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Liabilities_Application_Form_2_App__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm,00OD0000005CFSl,00OD0000005CFSj,00OD0000005CFSk,00OD0000005CFSr,00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kL0h&quot;+
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Liabilities Application Form 2 App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_R85_Document__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;templateId=a0PD0000005kLYC&quot;+
&quot;&amp;FP0=1&quot;+
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga R85 Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Debugging__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; 
&amp; $Api.Session_ID 
&amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; Conga_Liabilities_Application_Form_1_App__c   , &quot;Test Conga Workflow URL via UI&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Workflow Debugging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_YPSA_Application_Form__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;Reportid=00OD0000005CFSm,00OD0000005CFSl,00OD0000005CFSj,00OD0000005CFSk,00OD0000005CFSr,00OD0000005CFSq&quot;+
&quot;&amp;templateId=a0PD0000005kLHw&quot;+
&quot;&amp;QMode=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga YPSA Application Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Obtained__c</fullName>
        <inlineHelpText>Have you obtained consent to hold the customers personal sensitive data?</inlineHelpText>
        <label>Consent Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Continue_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Continue Application</label>
        <referenceTo>Continue_Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Continue_Link_From__c</fullName>
        <formula>LastModifiedDate + 1/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continue Link From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Continue_Link_Processing__c</fullName>
        <label>Continue Link Processing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Continue_Link_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continue Link Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Fee_Current_Account_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>£2 per transaction, explain exempt criteria (average balance previous month, £1500 current, £5000 savings and cheque deposit box).</inlineHelpText>
        <label>Counter Fee (Current Account Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covenant_Clause__c</fullName>
        <label>Covenant Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EBS_ID_OPP__c</fullName>
        <formula>CreatedBy.EBSUserId__c</formula>
        <label>Created By EBS ID OPP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment_Rationale__c</fullName>
        <description>C0068</description>
        <label>Credit Assessment Rationale</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_1_Date__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_1_UW__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 1 UW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_1__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 1</label>
        <picklist>
            <picklistValues>
                <fullName>Authorised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Information Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_2_Date__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_2_UW__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 2 UW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_2__c</fullName>
        <description>C0068</description>
        <label>Credit Decision 2</label>
        <picklist>
            <picklistValues>
                <fullName>Authorised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Information Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Impaired_Customer__c</fullName>
        <label>Is this a credit impaired customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Or_Debit__c</fullName>
        <label>Credit Or Debit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Transaction_Code__c</fullName>
        <label>Credit Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Transaction_Narritive__c</fullName>
        <label>Credit Transaction Narritive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerEmailRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CustomerEmailRequired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Number__c</fullName>
        <formula>Account.Home_Telephone_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_EBS_Number__c</fullName>
        <formula>Account.Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer EBS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Expected_drawdown_date__c</fullName>
        <description>For use with CPF reporting</description>
        <label>Customer Expected drawdown date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Images_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Images Set Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_account_id__c</fullName>
        <formula>Account_with_IBB__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer account id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_prompt_for_execution_only__c</fullName>
        <label>Customer prompt for execution only</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Account_Number__c</fullName>
        <label>DD Bank Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Account_Sort_Code__c</fullName>
        <label>DD Bank Account Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Lump_Sum_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD Lump Sum Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Regular_Payment_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD Regular Payment Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_or_MMA__c</fullName>
        <label>DM or MMA?</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Account_Opened__c</fullName>
        <label>Date Account Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Received__c</fullName>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opportunity_Lost__c</fullName>
        <label>Date Opportunity Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Second_Applicant__c</fullName>
        <label>Date of Birth Second Applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_of_Main_Applicant__c</fullName>
        <label>Date of Birth of Main Applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_redeem__c</fullName>
        <formula>Actual_completion_date__c +( Term_of_Finance_Months__c * 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date to redeem</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_at_Ready_for_Credit__c</fullName>
        <formula>Received_by_credit__c - Ready_for_credit_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Ready for Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_1st_Decision_to_Final_Decision__c</fullName>
        <formula>Latest_Final_Credit_Decision_Date__c - Credit_Decision_1_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from 1st Decision to Final Decision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>